--- a/_sass/imports/_typo.scss
+++ b/_sass/imports/_typo.scss
@@ -3,17 +3,17 @@
 //
 * {
   font-family: "Fira Sans", sans-serif;
-  color: $black;
+  color: var(--black);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 *::-moz-selection {
-  background: $black;
-  color: $white;
+  background: var(--black);
+  color: var(--white);
 }
 *::selection {
-  background: $black;
-  color: $white;
+  background: var(--black);
+  color: var(--white);
 }
 p,
 p b,
@@ -37,7 +37,7 @@ h1 {
   font-size: 54px;
   line-height: 52px;
   font-weight: 900;
-  color: $red;
+  color: var(--red);
   text-transform: lowercase;
   display: inline;
 
@@ -97,19 +97,19 @@ h4 {
 }
 a {
   // text-decoration: none;
-  // color: $black;
+  // color: var(--black);
 
   @include transition(all 175ms ease-in-out);
 }
 a:hover {
-  color: $red;
+  color: var(--red);
 }
 li {
   list-style: none;
   font-family: "Fira Sans", sans-serif;
   font-weight: 100;
   font-size: 14px;
-  color: $black;
+  color: var(--black);
 
   @include transition(color 150ms ease-in-out);
 }
@@ -119,7 +119,7 @@ section p,
   margin: 20px 0;
 }
 .button {
-  color: $black;
+  color: var(--black);
   text-transform: uppercase;
   text-align: center;
   text-decoration: none;
@@ -129,13 +129,13 @@ section p,
   letter-spacing: 0.5px;
 }
 .button:hover {
-  color: $black;
+  color: var(--black);
 }
 .line-button {
-  color: $yellow;
+  color: var(--yellow);
 }
 .line-button:hover {
-  color: $black;
+  color: var(--black);
 }
 
 
@@ -147,7 +147,7 @@ section p,
 }
 .site-title span {
   font-weight: 800;
-  color: $yellow;
+  color: var(--yellow);
   text-transform: uppercase;
   font-size: 22.75px;
   line-height: 21px;
@@ -161,14 +161,14 @@ section p,
   font-weight: 600;
 }
 .open-nav .site-nav a {
-  color: $black;
+  color: var(--black);
   padding: 10px 0;
 }
 .site-nav a.events-link {
   text-decoration: none;
   margin: 0;
-  background: $yellow;
-  color: $black;
+  background: var(--yellow);
+  color: var(--black);
   padding: 7px 14px;
   border-radius: 3px;
 
@@ -180,12 +180,12 @@ section p,
   padding: 10px 0;
 }
 .site-nav a.events-link:hover {
-  background: $red;
-  color: $white;
+  background: var(--red);
+  color: var(--white);
 }
 .open-nav .site-nav a.events-link:hover {
-  background: $yellow;
-  color: $black;
+  background: var(--yellow);
+  color: var(--black);
 }
 
 
@@ -203,7 +203,7 @@ section p,
   padding: 2px 13px;
   font-weight: 700;
   font-size: 14px;
-  background: $yellow;
+  background: var(--yellow);
   box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
 
   @media (min-width: 520px) {
@@ -244,13 +244,13 @@ section p,
 .filter-container span {
   font-size: 22px;
   font-weight: 600;
-  color: $medgrey;
+  color: var(--medgrey);
 
   @include transition(color 150ms ease-in-out);
 }
 .filter-container span:hover,
 .filter-container span.active-filter {
-  color: $black;
+  color: var(--black);
 }
 .post-list a {
   text-decoration: none;
@@ -265,21 +265,21 @@ section p,
   }
 }
 .post-list a:focus {
-  color: $black;
+  color: var(--black);
   // border: none;
   // width: 102%;
   // margin-left: -3%;
-  // box-shadow: 0px 2px 10px $rgbaBlack-25;
+  // box-shadow: 0px 2px 10px var(--black-op-25);
   // outline: none;
 }
 .post-list li:hover a {
-  color: $black;
+  color: var(--black);
 }
 .post-list li {
   list-style: none;
 }
 .post-link {
-  color: $black;
+  color: var(--black);
   @include transition(color 175ms ease-in-out);
 }
 .post-link p {
@@ -299,10 +299,10 @@ section p,
 }
 .post-list h4,
 .post-list h5 {
-  background: $yellow;
+  background: var(--yellow);
   display: inline-block;
   padding: 10px 20px;
-  color: $black;
+  color: var(--black);
   font-weight: 900;
   text-transform: uppercase;
 
@@ -350,7 +350,7 @@ a.post-link:hover h3,
 .nutrition-container span,
 .nutrition-container strong {
   font-weight: 200;
-  color: $black;
+  color: var(--black);
 
   @include transition(color 150ms ease-in-out);
 }
@@ -364,24 +364,24 @@ a.post-link:hover h3,
   font-size: 20px;
   line-height: 18px;
   font-weight: 600;
-  color: $red;
+  color: var(--red);
 
   @include transition(color 150ms ease-in-out);
 }
 .copy-button {
-  color: $white;
+  color: var(--white);
 }
 .recipe-content li {
   // font-size: 500;
 }
 .recipe-content li.toggled {
   // font-size: 500;
-  color: $darkgrey;
+  color: var(--darkgrey);
   font-style: italic;
   text-decoration: line-through;
 }
 .date-time * {
-  color: $black;
+  color: var(--black);
 }
 .date-time h3 {
   margin: 0;
@@ -403,7 +403,7 @@ a.post-link:hover h3,
 // Footer Styles
 //
 footer * {
-  color: $black;
+  color: var(--black);
 }
 .social-container p {
   margin: 20px auto;
