Re-doing the navigation style and functionality. Search toggle, modal and results list updated styles and functionatliy as well. Removing some old curd.

--- a/_layouts/default-test.html
+++ b/_layouts/default-test.html
@@ -19,7 +19,7 @@
       <p class="footnote" id="footnote"></p>
     </main>
 
-    <div class="notification-mask"></div>
+    <div class="overlay-mask"></div>
 
 
     {%- include footer.html -%}
