--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -18,7 +18,7 @@
       {{ content }}
       <p class="footnote" id="footnote"></p>
     </main>
-    <div class="notification-mask"></div>
+    <div class="overlay-mask"></div>
 
 
     {%- include footer.html -%}
