Adding boilerplate cookie functionality for night mode detection. Added menu button to chose night mode. tweaked other styles and js across site.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -65,7 +65,7 @@
 
 
 
-    <div class="menu-toggle">
+    <div class="menu-toggle" id="menu-toggle">
       <div class="toggle-container">
         <span></span>
         <span></span>
