--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
 
     {%- include search-modal.html -%}
 
+    {%- include settings-modal.html -%}
+
 
     <main class="page-content" aria-label="Content">
       {{ content }}
