--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -13,6 +13,8 @@
 
     {%- include search-modal.html -%}
 
+    {%- include settings-modal.html -%}
+
 
     <main class="page-content" aria-label="Content" id="recipe-head">
       {{ content }}
