--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,7 +1,7 @@
 {% comment %} <!-- Production - Minified - Uglified JS --> {% endcomment %}
 {% if jekyll.environment == "production" %}
-  <script type="text/javascript" src="/scripts/libs/jquery_3.3.1.min.js"></script>
-  <script type="text/javascript" src="/scripts/min/tldr.js"></script>
+  <script type="text/javascript" src="/scripts/libs/jquery_3.3.1.min.js" async></script>
+  <script type="text/javascript" src="/scripts/min/tldr.js" async></script>
 {% endif %}
 
 {% comment %} <!-- Development --> {% endcomment %}
