--- a/_layouts/nm/nm-home.html
+++ b/_layouts/nm/nm-home.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: nm/nm-default
 ---
 <section id="master-list" class="master-list">
 
@@ -46,8 +46,6 @@ layout: default
 
           {% comment %} <!-- Filter out night mode posts --> {% endcomment %}
           {%- if recipe.permalink contains 'nm/' -%}
-            {% comment %} <!-- Do Nothing :) --> {% endcomment %}
-          {%- else -%}
             <li data-favorite="{{ recipe.favorite }}" class="">
               <a class="post-link" href="{{ recipe.permalink | relative_url }}">
                 {{ recipe.title | escape }}
@@ -64,9 +62,9 @@ layout: default
                 </svg>
               </span>
             </li>
+          {%- else -%}
+            {% comment %} <!-- Do Nothing :) --> {% endcomment %}
           {%- endif -%}
-
-
         {%- endfor -%}
       </ul>
 
@@ -77,25 +75,24 @@ layout: default
 
           {% comment %} <!-- Filter out night mode posts --> {% endcomment %}
           {%- if recipe.permalink contains 'nm/' -%}
-            {% comment %} <!-- Do Nothing :) --> {% endcomment %}
+            <li data-favorite="{{ recipe.favorite }}" class="">
+              <a class="post-link" href="{{ recipe.permalink | relative_url }}">
+                {{ recipe.title | escape }}
+              </a>
+              <span class="favorite-flag">
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                   viewBox="0 0 280.7 268.7" style="enable-background:new 0 0 280.7 268.7;" xml:space="preserve">
+                <g>
+                  <path d="M132.3,235.2l-59.8,31.4c-12.8,6.7-27.7-4.1-25.2-18.3l11.4-66.6c1-5.6-0.9-11.4-5-15.4L5.3,119.2
+                    c-10.3-10.1-4.6-27.6,9.6-29.7l66.8-9.7c5.7-0.8,10.6-4.4,13.1-9.5l29.9-60.6c6.4-12.9,24.8-12.9,31.2,0l29.9,60.6
+                    c2.5,5.1,7.4,8.7,13.1,9.5l66.8,9.7c14.3,2.1,20,19.6,9.6,29.7l-48.4,47.1c-4.1,4-6,9.8-5,15.4l11.4,66.6
+                    c2.4,14.2-12.5,25-25.2,18.3l-59.8-31.4C143.4,232.5,137.3,232.5,132.3,235.2z"/>
+                </g>
+                </svg>
+              </span>
+            </li>
           {%- else -%}
-
-          <li data-favorite="{{ recipe.favorite }}" class="">
-            <a class="post-link" href="{{ recipe.permalink | relative_url }}">
-              {{ recipe.title | escape }}
-            </a>
-            <span class="favorite-flag">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-              	 viewBox="0 0 280.7 268.7" style="enable-background:new 0 0 280.7 268.7;" xml:space="preserve">
-              <g>
-              	<path d="M132.3,235.2l-59.8,31.4c-12.8,6.7-27.7-4.1-25.2-18.3l11.4-66.6c1-5.6-0.9-11.4-5-15.4L5.3,119.2
-              		c-10.3-10.1-4.6-27.6,9.6-29.7l66.8-9.7c5.7-0.8,10.6-4.4,13.1-9.5l29.9-60.6c6.4-12.9,24.8-12.9,31.2,0l29.9,60.6
-              		c2.5,5.1,7.4,8.7,13.1,9.5l66.8,9.7c14.3,2.1,20,19.6,9.6,29.7l-48.4,47.1c-4.1,4-6,9.8-5,15.4l11.4,66.6
-              		c2.4,14.2-12.5,25-25.2,18.3l-59.8-31.4C143.4,232.5,137.3,232.5,132.3,235.2z"/>
-              </g>
-              </svg>
-            </span>
-          </li>
+            {% comment %} <!-- Do Nothing :) --> {% endcomment %}
           {%- endif -%}
         {%- endfor -%}
       </ul>
@@ -107,24 +104,24 @@ layout: default
 
             {% comment %} <!-- Filter out night mode posts --> {% endcomment %}
             {%- if post.permalink contains 'nm/' -%}
-              {% comment %} <!-- Do Nothing :) --> {% endcomment %}
+              <li data-favorite="{{ post.favorite }}" class="">
+                <a class="post-link" href="{{ post.permalink | relative_url }}">
+                  {{ post.title | escape }}
+                </a>
+                <span class="favorite-flag">
+                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 280.7 268.7" style="enable-background:new 0 0 280.7 268.7;" xml:space="preserve">
+                  <g>
+                    <path d="M132.3,235.2l-59.8,31.4c-12.8,6.7-27.7-4.1-25.2-18.3l11.4-66.6c1-5.6-0.9-11.4-5-15.4L5.3,119.2
+                      c-10.3-10.1-4.6-27.6,9.6-29.7l66.8-9.7c5.7-0.8,10.6-4.4,13.1-9.5l29.9-60.6c6.4-12.9,24.8-12.9,31.2,0l29.9,60.6
+                      c2.5,5.1,7.4,8.7,13.1,9.5l66.8,9.7c14.3,2.1,20,19.6,9.6,29.7l-48.4,47.1c-4.1,4-6,9.8-5,15.4l11.4,66.6
+                      c2.4,14.2-12.5,25-25.2,18.3l-59.8-31.4C143.4,232.5,137.3,232.5,132.3,235.2z"/>
+                  </g>
+                  </svg>
+                </span>
+              </li>
             {%- else -%}
-            <li data-favorite="{{ post.favorite }}" class="">
-              <a class="post-link" href="{{ post.permalink | relative_url }}">
-                {{ post.title | escape }}
-              </a>
-              <span class="favorite-flag">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                	 viewBox="0 0 280.7 268.7" style="enable-background:new 0 0 280.7 268.7;" xml:space="preserve">
-                <g>
-                	<path d="M132.3,235.2l-59.8,31.4c-12.8,6.7-27.7-4.1-25.2-18.3l11.4-66.6c1-5.6-0.9-11.4-5-15.4L5.3,119.2
-                		c-10.3-10.1-4.6-27.6,9.6-29.7l66.8-9.7c5.7-0.8,10.6-4.4,13.1-9.5l29.9-60.6c6.4-12.9,24.8-12.9,31.2,0l29.9,60.6
-                		c2.5,5.1,7.4,8.7,13.1,9.5l66.8,9.7c14.3,2.1,20,19.6,9.6,29.7l-48.4,47.1c-4.1,4-6,9.8-5,15.4l11.4,66.6
-                		c2.4,14.2-12.5,25-25.2,18.3l-59.8-31.4C143.4,232.5,137.3,232.5,132.3,235.2z"/>
-                </g>
-                </svg>
-              </span>
-            </li>
+              {% comment %} <!-- Do Nothing :) --> {% endcomment %}
             {%- endif -%}
           {% endfor %}
         </ul>
