--- a/assets/main.scss
+++ b/assets/main.scss
@@ -534,7 +534,7 @@ nav.site-nav {
 main {
   background: var(--white);
 
-  @include transition(all 150ms ease-in-out);
+  @include transition(all 300ms ease-in-out);
 }
 main.page-content {
   // height: calc(100% - 85px);
@@ -798,6 +798,9 @@ a.post-link:hover .double-arrow svg {
   width: 100%;
 
   @include transition(all 300ms ease-in-out);
+}
+.night-mode .overlay-mask {
+  background: var(--ultrablack-op-25);
 }
 .open-nav .overlay-mask,
 .searching .overlay-mask,
