fine-tuning nm-cookie functionality. js redirect depending on users custom settings. minor css updates

--- a/_sass/imports/_colors.scss
+++ b/_sass/imports/_colors.scss
@@ -17,6 +17,7 @@
   --darkblue: #311B92;
   --yellow: #ffff00;
   --gold: #FFD54F;
+  --gold-hover: #FFB450;
 
   --black-op-25: rgba(38, 50, 58, 0.25);
 
