added /recipes page for filler contnet. fine tuned a few minor styles.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -254,6 +254,7 @@ nav.site-nav {
   box-sizing: border-box;
   background: var(--white);
   border-bottom: 1px solid var(--black);
+  pointer-events: none;
 
   position: fixed;
   top: 45px;
@@ -1460,150 +1461,7 @@ footer {
 
 
 
-
-
-
-
-
-
-
-//
-// Night Mode
-//
-.nm-toggle {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.nm-toggle span {
-  display: block;
-  height: 20px;
-  width: 20px;
-  background: black;
-  cursor: pointer;
-}
-
-
-.night-mode::-webkit-scrollbar {
-  background: var(--black);
-}
-.night-mode::-webkit-scrollbar-thumb {
-  background: var(--ultrablack);
-}
-
-body.night-mode,
-.night-mode main,
-.night-mode .master-list {
-  background: var(--black);
-}
-.night-mode header.site-header {
-  background: var(--ultrablack);
-}
-.night-mode .highlight {
-  background: var(--aqua);
-}
-.night-mode .search-toggle {
-  background: var(--ultrablack);
-}
-.night-mode .recipe-content {
-  background: var(--black);
-}
-.night-mode .coming-soon {
-  background: var(--medblack);
-}
-.night-mode .list-toggle {
-  background: var(--ultrablack);
-}
-.night-mode .toggled .list-toggle span {
-  background: var(--aqua);
-}
-.night-mode .copy-button {
-  background: var(--aqua);
-  color: var(--ultrablack);
-}
-
-.night-mode .video-btn svg {
-  fill: var(--aqua);
-}
-.night-mode .video-btn:hover svg {
-  fill: var(--white);
-}
-.night-mode #play-btn {
-  // background: var(--clear);
-}
-.night-mode .play-video #play-btn span:first-child {
-  border-top: 15px solid transparent;
-  border-left: 30px solid var(--aqua);
-  border-bottom: 15px solid transparent;
-}
-.night-mode .play-video #play-btn span {
-  background: var(--clear);
-}
-.night-mode #play-btn span {
-  background: var(--aqua);
-}
-.night-mode .play-video #play-btn:hover span:first-child {
-  border-top: 15px solid transparent;
-  border-left: 30px solid var(--white);
-  border-bottom: 15px solid transparent;
-}
-.night-mode .play-video #play-btn:hover span {
-  background: var(--clear);
-}
-.night-mode #play-btn:hover span {
-  background: var(--white);
-}
-
-
-
-// Typo Changes
-.night-mode h1,
-.night-mode h2,
-.night-mode h3 {
-  color: var(--aqua);
-}
-.night-mode h3 {
-  color: var(--white);
-}
-.night-mode .filter-container span {
-  color: var(--medblack);
-}
-.night-mode .filter-container span.active-filter,
-.night-mode .filter-container span:hover {
-   color: var(--white);
-}
-.night-mode .post-link {
-  color: var(--white);
-}
-.night-mode .post-list li:hover {
-  border-bottom: 1px solid var(--aqua);
-}
-.night-mode .post-list li:hover a {
-  color: var(--aqua);
-}
-.night-mode .fav-descrition {
-  color: var(--white);
-}
-.night-mode .nutrition-container span,
-.night-mode .nutrition-container strong {
-  color: var(--white);
-}
-.night-mode .recipe-content li {
-  color: var(--white);
-}
-.night-mode ol.instruction-list li:before {
-  color: var(--aqua);
-}
-
-
-
-
-
-
-
-
-
-
-
+@import
+  "imports/night-mode"
+;
 //
