--- a/assets/main.scss
+++ b/assets/main.scss
@@ -54,6 +54,10 @@ body {
   //   padding: 125px 0 0;
   // }
 }
+// For iOS styles
+input {
+  border-radius: 0;
+}
 .open-nav,
 .searching,
 .searching-mobile {
