--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,13 +50,10 @@
 
 
   <div class="nav-button-container">
-    <!-- <div class="nm-toggle">
-      <span></span>
-    </div> -->
 
     <input type="text" class="search-input" id="search-input" placeholder="search recipes...">
 
-    <div class="search-toggle search-icon">
+    <div class="search-toggle search-icon" id="search-toggle">
       <div class="close-container">
         <span></span>
         <span></span>
