--- a/_includes/settings-modal.html
+++ b/_includes/settings-modal.html
@@ -1,4 +1,29 @@
 <!-- HTML elements for search -->
+
 <div class="settings-modal">
-  <span id="nm-trigger">Nightmode I/O</span>
+
+  <div class="setting" id="nm-trigger">
+    <span>Nightmode</span>
+
+    <div class="toggle-container">
+      <span></span>
+    </div>
+  </div>
+
+  <div class="setting" id="">
+    <span>Notifications</span>
+
+    <div class="toggle-container">
+      <span></span>
+    </div>
+  </div>
+
+  <div class="setting" id="">
+    <span>Clear Favorites</span>
+
+    <div class="toggle-container">
+      <span></span>
+    </div>
+  </div>
+
 </div>
