--- a/_includes/nm/nm-header.html
+++ b/_includes/nm/nm-header.html
@@ -53,14 +53,12 @@
 
     <input type="text" class="search-input" id="search-input" placeholder="search recipes...">
 
-    <div class="search-toggle search-icon">
+    <div class="search-toggle search-icon" id="search-toggle">
       <div class="close-container">
         <span></span>
         <span></span>
       </div>
     </div>
-
-
 
     <div class="menu-toggle" id="menu-toggle">
       <div class="toggle-container">
