--- a/_layouts/nm/nm-default.html
+++ b/_layouts/nm/nm-default.html
@@ -21,7 +21,7 @@
       <p class="footnote" id="footnote"></p>
     </main>
 
-    <div class="overlay-mask"></div>
+    <div class="overlay-mask" id="overlay-mask"></div>
 
     {%- include footer.html -%}
   </body>
