overlay mask id added to template

--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -20,8 +20,8 @@
       {{ content }}
       <p class="footnote" id="footnote"></p>
     </main>
-    <div class="overlay-mask"></div>
 
+    <div class="overlay-mask" id="overlay-mask"></div>
 
     {%- include footer.html -%}
   </body>
