--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,8 @@
 
     <input type="text" class="search-input" id="search-input" placeholder="search recipes...">
 
-    <div class="search-toggle search-icon" id="search-toggle">
+    <div class="search-toggle" id="search-toggle">
+      
       <div class="close-container">
         <span></span>
         <span></span>
